Dear Emacs, please make this -*-Text-*- mode!

NEWS for gWidgetstcltk

Changes for 0.0-54
-------------------

* gfile has character value for filter argument to simplify specification

Changes for 0.0-53
-------------------

* add tag method for gaction.
* fix dnd table to gedit. (prompted by stackoverflow answer). (Still a
  little off, as you need to select first, then drag)
* replace gdf with tablelist, not tktable widget. Seems better and
  requires no external installation, as it is pure Tcl.

Changes for 0.0-50
-------------------

Changes for 0.0-49
-------------------

* Bug fix for enabled<- method for gedit when initial text is
  "". (Thanks Yves)

Changes for 0.0-48
-------------------
 
* fixed bug with user-defined icons (Thanks Erich)
* fixed bug where inner frame in gwindow rendered separately (Thanks Erich, Rich and Patrick)

Changes for 0.0-47
-------------------

* bug fix for svalue<- for gedit. (Thanks Pat)
* bug fix of using wrong idiom to store data in a namespace (Thanks Erich)

Changes for 0.0-46
-------------------

* minor bug fix to fix environment issue, get past check

Changes for 0.0-45
-------------------

* Requires gWidgets 0.0-46

* Fixed reference class fields to accomodate changes to upcoming
  2.14.0

* Added generics so that $, [[ and [[<- work with underlying toolkit object

* added use.table option to gcheckboxgroup

* focus<- for gwindow (for Erich)

* added do.buttons options for gbasicdialog

* improved [ method for glayout (Returns widget, list of widgets (if
  1-d slice) or matrix of widgets.

Changes for 0.0-44
-------------------
* new add method for adding tkrplot objects

* bug fixes for gfile (Thanks Richie, Yves)

* bug fixes for gcomobobox (Thanks Erich, Yves)

* added stub for ghtml

Changes for 0.0-43
-------------------
* change to selected= argument of gcomobobx. Will allow item value in
addition to index. 

* Bug fixes, (Thanks Erich, Carlos)

* new method editable<-. Used by gedit to allow selection but no